--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 # uncomment the urls if you wish to display them, and add your own URL
 - project: IMMERSION PRO 
   role: Product Developement
-  duration: Course: IDS 401
+  duration: Course IDS 401
   #url: https://www.linkedin.com/in/chumr/
   description: 
 
