--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,7 +4,7 @@
   role: Product Developement
   duration: Course IDS 401
   #url: https://www.linkedin.com/in/chumr/
-  description: 
+  description: To design a product that uses machine learning to gather data on how real humans speak every day providing convenient access to language learning and communication support The goal is to create a personalized learning experience that allows individuals to confidently enter any new situation and communicate with ease
 
 
 
